# Pupil

./: .gitignore  CMakeLists.txt  Pupil.sln  Pupil.vcxproj  Pupil.vcxproj.filters  README.md  developmentLog.md
asset/shaders/: shader.vert
engine/: CMakeLists.txt
engine/asset/shaders/: compile.bat  shader.frag
engine/precompile/: precompile.cmake  precompile.json.in
engine/precompile/relfectionGen/: CMakeLists.txt
engine/precompile/template/: allReflectionFile.mustache  allSerializer.h.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
engine/source/: main.cpp
engine/source/_generated/serializer/: all_serializer.h  all_serializer.ipp
engine/source/editor/: CMakeLists.txt  editor.cpp  editor.h  editor_ui.cpp  editor_ui.h
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/: macro.h
engine/source/runtime/core/color/: color.h
engine/source/runtime/core/file_system/: file_system.cpp  file_system.h
engine/source/runtime/core/log/: log.cpp  log.h
engine/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  math_headers.h  math_marcos.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  transform.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
engine/source/runtime/core/primitive/: primitive.h
engine/source/runtime/core/reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
engine/source/runtime/core/serializer/: serializer.cpp  serializer.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/render/: light.h  primitive.h  render_camera.cpp  render_camera.h  render_common.h  render_entity.h  render_mesh.h  render_pass.cpp  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_resource.cpp  render_resource.h  render_resource_base.cpp  render_resource_base.h  render_scene.cpp  render_scene.h  render_swap_context.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h
engine/source/runtime/function/ui/: window_ui.cpp  window_ui.h
engine/source/runtime/platform/rhi/: rhi.h  rhi_struct.h
engine/source/runtime/platform/rhi/vulkan/: vulkan_rhi.cpp  vulkan_rhi.h  vulkan_struct.h  vulkan_utils.h
engine/source/runtime/resource/asset_manager/: asset_manager.h
engine/source/runtime/resource/config_manager/: config_manager.cpp  config_manager.h
engine/source/runtime/resource/config_manager/deployment/: conf.ini
engine/source/runtime/resource/config_manager/development/: conf.ini
engine/source/runtime/resource/type/data/: camera_config.h  mesh_data.h
engine/source/runtime/resource/type/global/: global_rendering.h
engine/source/runtime/tools/reflection/: reflection.cpp  reflection.h  reflection_register.cpp
engine/source/runtime/tools/serializer/: serializer.h
